--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>get the address by the CEP</h1>
 
     <form class="container">
-        <input type="text" id="cepInp">
+        <input type="text" id="cepInp" value="01001000">
         <input type="button" value="Search" id="cepBtn">
     </form>
 
