--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>SearchCEP</title>
 </head>
 <body> 
     <h1>get the address by the CEP</h1>
 
-    <form class="container">
-        <input type="text" id="cepInp" value="01001000">
+    <form class="container" autocomplete="off">
+        <input type="text" id="cepInp">
         <input type="button" value="Search" id="cepBtn">
     </form>
 
